another bug from z-index sha

--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,6 @@ input {
 
   margin: auto;
 }
+.index {
+  z-index: 9999;
+}
